[gd_scene load_steps=2 format=3 uid="uid://b2uvktx0jjqo4"]

[ext_resource type="Script" uid="uid://k4grr2mepba6" path="res://game/ui/menus/new_game_menu/new_game_menu.gd" id="1_0teso"]

[node name="NewGameMenu" type="PanelContainer"]
offset_right = 354.0
offset_bottom = 47.0
script = ExtResource("1_0teso")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="GameNameEntry" type="LineEdit" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
placeholder_text = "New game name"

[node name="StartGameButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Start new game"

[connection signal="pressed" from="HBoxContainer/StartGameButton" to="." method="_on_start_game_button_pressed"]
